--- a/boilerplate-npm-gomix/package.json
+++ b/boilerplate-npm-gomix/package.json
@@ -1,9 +1,5 @@
 {
-	"author": {
-		"name": "Caleb M. McLaren with freeCodeCamp",
-		"email": "kbmclaren@gmail.com",
-		"start-date":"16th May, 2022"
-	},
+	"author": "Caleb M. McLaren with freeCodeCamp",
 	"name": "fcc-learn-npm-package-json",
 	"dependencies": {
 		"express": "^4.14.0"
