--- a/boilerplate-npm-gomix/package.json
+++ b/boilerplate-npm-gomix/package.json
@@ -1,6 +1,7 @@
 {
 	"author": "Caleb M. McLaren with freeCodeCamp",
 	"description": "A project that does something awesome",
+	"keywords": ["descriptive", "related", "words", "freecodecamp"],
 	"name": "fcc-learn-npm-package-json",
 	"dependencies": {
 		"express": "^4.14.0"
